--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,6 +1,6 @@
-Babel
-numpy
-pandas
-seaborn
-streamlit
-matplotlib
+Babel==2.17.0
+numpy==3.10.1
+pandas==2.2.3
+seaborn==2.2.3
+streamlit==0.13.2
+matplotlib==1.43.1
